Fix height issue with browser bar on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  min-height: 100vh;
+  height: calc(var(--vh, 1vh) * 100); /* iphone 100vh fix */
   display: flex;
   flex-direction: column;
   align-items: center;
